--- a/style.css
+++ b/style.css
@@ -11,3 +11,12 @@
 {
 .noprint {display:none;}
 }
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
